displaying pics by column

--- a/web/app.html
+++ b/web/app.html
@@ -9,6 +9,6 @@
     <body>
         <header></header>
         <section id="content"></section>
-        <footer></footer>
+        <footer>&copy; Copyright 2011 by JoPs.</footer>
     </body>
 </html>
