--- a/web/app.html
+++ b/web/app.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta name="robots" content="noindex">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>Tan, Johan & Evan</title>
         <link rel="stylesheet" href="css/main.css" />
         <script data-main="js/main" src="js/require-jquery.js"></script>
