--- a/web/app.html
+++ b/web/app.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html manifest="wallblog.appcache">
     <head>
         <meta name="robots" content="noindex">
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>Tan, Johan & Evan</title>
         <link rel="stylesheet" href="css/main.css" />
