--- a/web/app.html
+++ b/web/app.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html manifest="wallblog.appcache">
     <head>
+        <title>Tan, Johan & Evan</title>
+        <link rel="stylesheet" href="css/main.css" />
         <meta name="robots" content="noindex">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <title>Tan, Johan & Evan</title>
-        <link rel="stylesheet" href="css/main.css" />
+        <script src="js/modernizr.js"></script>
         <script data-main="js/main" src="js/require-jquery.js"></script>
     </head>
     <body>
