Code restructuration and zoom page redesign in progress

--- a/web/app.html
+++ b/web/app.html
@@ -6,8 +6,8 @@
         <meta name="robots" content="noindex">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <script src="js/modernizr.js"></script>
-        <script data-main="js/main" src="js/require-jquery.js"></script>
+        <script src="js/lib/modernizr.js"></script>
+        <script data-main="js/main" src="js/lib/require-jquery.js"></script>
     </head>
     <body>
         <header></header>
