--- a/web/app.html
+++ b/web/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="wallblog.appcache">
+<html>
     <head>
         <title>Tan, Johan & Evan</title>
         <link rel="stylesheet" href="css/main.css" />
