--- a/web/app.html
+++ b/web/app.html
@@ -8,6 +8,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <script src="js/lib/modernizr.js"></script>
         <script data-main="js/main" src="js/lib/require-jquery.js"></script>
+        <script type="text/javascript">
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-32210485-1']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+
+        </script>
     </head>
     <body>
         <header></header>
