routes.js is fixed.

--- a/web/app.html
+++ b/web/app.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>Tan, Johan & Evan</title>
-        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="/css/main.css" />
         <meta name="robots" content="noindex">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <script src="js/lib/modernizr.js"></script>
-        <script data-main="js/main" src="js/lib/require-jquery.js"></script>
+        <script src="/js/lib/modernizr.js"></script>
+        <script data-main="/js/main" src="/js/lib/require-jquery.js"></script>
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-32210485-1']);
