--- a/web/app.html
+++ b/web/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="wallblog.appcache">
     <head>
         <title>Tan, Johan & Evan</title>
         <link rel="stylesheet" href="/css/main.css" />
