--- a/web/app.html
+++ b/web/app.html
@@ -1,29 +1,15 @@
 <!DOCTYPE html>
-<html manifest="wallblog.appcache">
+<html>
     <head>
         <title>Tan, Johan & Evan</title>
         <link rel="stylesheet" href="/css/main.css" />
         <meta name="robots" content="noindex">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <script src="/js/lib/modernizr.js"></script>
-        <script data-main="/js/main" src="/js/lib/require-jquery.js"></script>
-        <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-32210485-1']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
-
-        </script>
+        <script src="js/libs/modernizr.js"></script>
     </head>
     <body>
-        <header></header>
-        <section id="content"></section>
-        <footer>&copy; Copyright 2011 by JoPs.</footer>
+        <div id="wallblog"></div>
+        <script data-main="js/main" src="js/libs/require.js"></script>
     </body>
 </html>
