--- a/web/app.html
+++ b/web/app.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tan, Johan & Evan</title>
+        <title>Wallblog</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" href="/css/main.css" />
         <meta name="robots" content="noindex">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
@@ -9,7 +10,6 @@
         <script src="js/libs/modernizr.js"></script>
     </head>
     <body>
-        <div id="wallblog"></div>
         <script data-main="js/main" src="js/libs/require.js"></script>
     </body>
 </html>
