Trying using events

--- a/web/app.html
+++ b/web/app.html
@@ -10,6 +10,7 @@
         <script src="js/libs/modernizr.js"></script>
     </head>
     <body>
+        <div id="wallblog"></div>
         <script data-main="js/main" src="js/libs/require.js"></script>
     </body>
 </html>
