--- a/web/app.html
+++ b/web/app.html
@@ -7,10 +7,13 @@
         <meta name="robots" content="noindex">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <script src="js/libs/modernizr.js"></script>
+        <script src="/js/libs/modernizr.js"></script>
     </head>
     <body>
-        <div id="wallblog"></div>
-        <script data-main="js/main" src="js/libs/require.js"></script>
+        <header></header>
+        <section id="content">
+        </section>
+        <footer>&copy; Copyright 2011 by JoPs.</footer>
+        <script data-main="/js/main" src="/js/libs/require.js"></script>
     </body>
 </html>
