--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" manifest="app.appcache">
     <head>
         <meta charset="utf-8">
         <title>Wallblog</title>
