Real nb of items is displayed on the header bar.

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Wallblog</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="description" content="Blog made entirely by pictures diplayed on a wall.">
         <meta name="author" content="JoPs">
