Multi upload (up to 6) is possible.

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
         <div id="main"> </div>
         <footer></footer>
 
+        <div id="modal"> </div>
         <script data-main="/js/main" src="/js/libs/require.js"></script>
     </body>
 </html>
