--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="description" content="Blog made entirely by pictures diplayed on a wall.">
         <meta name="author" content="JoPs">
+		<meta http-equiv="cache-control" content="no-cache">
+		<meta http-equiv="pragma" content="no-cache">
+		<meta http-equiv="expires" content="0">
         <link href="/css/bootstrap.css" rel="stylesheet">
         <link href="/css/custom.css" rel="stylesheet">
         <!--[if lt IE 9]>
