--- a/web/index.html
+++ b/web/index.html
@@ -5,13 +5,12 @@
         <title>Wallblog</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="Blog made entirely by pictures diplayed on a wall.">
+        <meta name="description" content="Blog made entirely by pictures displayed on a wall.">
         <meta name="author" content="JoPs">
 		<meta http-equiv="cache-control" content="no-cache">
 		<meta http-equiv="pragma" content="no-cache">
 		<meta http-equiv="expires" content="0">
-        <link href="/css/bootstrap.css" rel="stylesheet">
-        <link href="/css/custom.css" rel="stylesheet">
+        <link href="/css/main.css" rel="stylesheet">
         <!--[if lt IE 9]>
           <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
