--- a/web/index.html
+++ b/web/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr" manifest="app.appcache">
-    <head>
-        <meta charset="utf-8">
-        <title>Wallblog</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="Blog made entirely by pictures displayed on a wall.">
-        <meta name="author" content="JoPs">
-		<meta http-equiv="cache-control" content="no-cache">
-		<meta http-equiv="pragma" content="no-cache">
-		<meta http-equiv="expires" content="0">
-        <link href="/css/main.css" rel="stylesheet">
-        <!--[if lt IE 9]>
-          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Wallblog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="Blog made entirely by pictures displayed on a wall.">
+    <meta name="author" content="JoPs">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <meta name="msapplication-TileImage" content="/img/windows-tile.png"/>
+    <meta name="msapplication-TileColor" content="#ffffff"/>
+    <link rel="fluid-icon" href="/img/fluidicon.png" title="Wallblog"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/wallblog-icon-114.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/wallblog-icon-144.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/wallblog-icon-114.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/wallblog-icon-144.png"/>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
+    <link href="/css/main.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
 
-    <body>
-        <header></header>
-        <div id="main"> </div>
-        <footer></footer>
+<body>
+    <header></header>
+    <div id="main"></div>
+    <footer></footer>
 
-        <div id="modal"> </div>
-        <script data-main="/js/main" src="/js/libs/require.js"></script>
-    </body>
+    <div id="modal"></div>
+    <script data-main="/js/main" src="/js/libs/require.js"></script>
+</body>
 </html>
