--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,8 @@
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!-- build:include:build analytics.js -->
+    <!-- /build -->
 </head>
 
 <body>
