--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,10 @@
     <link rel="apple-touch-icon" sizes="114x114" href="/img/wallblog-icon-114.png"/>
     <link rel="apple-touch-icon" sizes="144x144" href="/img/wallblog-icon-144.png"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
-    <link href="/css/main.css" rel="stylesheet">
+    <!-- build:css /css/main.css -->
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/custom.css" rel="stylesheet">
+    <!-- /build -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
