Display item on full page

--- a/web/index.html
+++ b/web/index.html
@@ -26,8 +26,7 @@
 
 <body>
     <script type="text/x-handlebars">
-        <header>Wallblog</header>
-        <div id="main">{{outlet}}</div>
+        {{outlet}}
     </script>
 
     <script src="vendor/jquery/dist/jquery.js"></script>
