Using ember-i18n for internationalization

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,8 @@
     <script src="vendor/handlebars/handlebars.min.js"></script>
     <script src="vendor/ember/ember.js"></script>
     <script src="vendor/ember-data/ember-data.js"></script>
+    <script src="vendor/cldr/plurals.js"></script>
+    <script src="vendor/ember-i18n/lib/i18n.js"></script>
     <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
     <script src="vendor/momentjs/min/moment-with-langs.js"></script>
 
