distribute pictures equally in columns

--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,7 @@
     </script>
 
     <script src="vendor/jquery/dist/jquery.js"></script>
+    <script src="vendor/underscore/underscore-min.js"></script>
     <script src="vendor/handlebars/handlebars.min.js"></script>
     <script src="vendor/ember/ember.js"></script>
     <script src="vendor/ember-data/ember-data.js"></script>
