--- a/web/index.html
+++ b/web/index.html
@@ -27,16 +27,16 @@
 <body>
     <script type="text/x-handlebars">
         {{outlet}}
+        {{outlet modal}}
     </script>
 
     <script src="vendor/jquery/dist/jquery.js"></script>
     <script src="vendor/underscore/underscore-min.js"></script>
     <script src="vendor/handlebars/handlebars.min.js"></script>
-    <script src="vendor/ember/ember.js"></script>
+    <script src="vendor/ember/ember.prod.js"></script>
     <script src="vendor/ember-data/ember-data.js"></script>
     <script src="vendor/cldr/plurals.js"></script>
     <script src="vendor/ember-i18n/lib/i18n.js"></script>
-    <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
     <script src="vendor/momentjs/min/moment-with-langs.js"></script>
 
     <script src="js/templates.js"></script>
