Rem: removed bootstrap

--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,8 @@
 
 <body>
     <header></header>
-    <div id="main"></div>
+    <aside></aside>
+    <section id="main"></section>
     <footer></footer>
 
     <div id="modal"></div>
