--- a/app/index.html
+++ b/app/index.html
@@ -30,5 +30,7 @@
     <footer></footer>
 
     <script src="/js/wallblog.js" type="text/javascript"> </script>
-</body>
+    <!-- @ifdef DEBUG -->
+    <script src="//localhost:35729/livereload.js"></script>
+    <!-- @endif --></body>
 </html>
