--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <title>Wallblog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="Blog made entirely by pictures displayed on a wall.">
+    <meta name="description" content="Blog composed by pictures, displayed on a wall.">
     <meta name="author" content="JoPs">
     <meta http-equiv="cache-control" content="no-cache">
     <meta http-equiv="pragma" content="no-cache">
@@ -19,8 +19,9 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/img/wallblog-icon-144.png"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <link href="/css/main.css" rel="stylesheet">
-    <!-- build:include:build analytics.js -->
-    <!-- /build -->
+    <!-- @ifndef DEBUG -->
+    <script async type="text/javascript" src="analytics.js"> </script>
+    <!-- @endif -->
 </head>
 
 <body>
