Chg: row display first draft

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 <body>
     <header></header>
     <aside></aside>
-    <section id="main"></section>
+    <main></main>
     <footer></footer>
 
     <script src="/js/wallblog.js" type="text/javascript"> </script>
