Chg: add cache buster on js/css files

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="/img/wallblog-icon-114.png"/>
     <link rel="apple-touch-icon" sizes="144x144" href="/img/wallblog-icon-144.png"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/main<!-- @echo BUILD_VERSION -->.css" rel="stylesheet">
     <!-- @ifndef DEBUG -->
     <script async type="text/javascript" src="analytics.js"> </script>
     <!-- @endif -->
@@ -30,7 +30,7 @@
     <main></main>
     <footer></footer>
 
-    <script src="/js/wallblog.js" type="text/javascript"> </script>
+    <script src="/js/wallblog<!-- @echo BUILD_VERSION -->.js" type="text/javascript"> </script>
     <!-- @ifdef DEBUG -->
     <script src="//localhost:35729/livereload.js"></script>
     <!-- @endif --></body>
