--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" manifest="/manifest.appcache">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <title>Wallblog</title>
