--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,10 @@
     <link rel="apple-touch-icon" sizes="114x114" href="/img/wallblog-icon-114.png"/>
     <link rel="apple-touch-icon" sizes="144x144" href="/img/wallblog-icon-144.png"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
-    <link href="/css/main<!-- @echo BUILD_VERSION -->.css" rel="stylesheet">
-    <!-- @ifndef DEBUG -->
+    <link href="/css/main.css" rel="stylesheet">
+    <!-- build:remove:dev -->
     <script async type="text/javascript" src="analytics.js"> </script>
-    <!-- @endif -->
+    <!-- /build -->
 </head>
 
 <body>
@@ -31,8 +31,8 @@
     <main></main>
     <footer></footer>
 
-    <script src="/js/wallblog<!-- @echo BUILD_VERSION -->.js" type="text/javascript"> </script>
-    <!-- @ifdef DEBUG -->
-    <script src="//localhost:35729/livereload.js"></script>
-    <!-- @endif --></body>
+    <script src="/js/wallblog.js" type="text/javascript"> </script>
+    <!-- build:remove:dist -->
+    <script src="//localhost:9091"></script>
+    <!-- /build -->
 </html>
