--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <link href="/css/main.css" rel="stylesheet">
     <!-- build:remove:dev -->
-    <script async type="text/javascript" src="analytics.js"> </script>
+    <script async type="text/javascript" src="/analytics.js"> </script>
     <!-- /build -->
 </head>
 
