Chg: js script async

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     <main></main>
     <footer></footer>
 
-    <script src="/js/wallblog.js" type="text/javascript"> </script>
+    <script async src="/js/wallblog.js" type="text/javascript"> </script>
     <!-- build:remove:dist -->
     <script src="//localhost:9091"></script>
     <!-- /build -->
