Theme color for android chrome browser

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <meta http-equiv="expires" content="0">
     <meta name="msapplication-TileImage" content="/img/windows-tile.png"/>
     <meta name="msapplication-TileColor" content="#ffffff"/>
+    <meta name="theme-color" content="#83C22A">
     <link rel="fluid-icon" href="/img/fluidicon.png" title="Wallblog"/>
     <link rel="apple-touch-icon" sizes="57x57" href="/img/wallblog-icon-114.png"/>
     <link rel="apple-touch-icon" sizes="72x72" href="/img/wallblog-icon-144.png"/>
