save subscribtions to server

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/img/wallblog-icon-144.png"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <link href="/css/main.css" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json">
     <!-- build:remove:dev -->
     <script async type="text/javascript" src="/analytics.js"> </script>
     <!-- /build -->
