Fix manifest and icons

--- a/app/index.html
+++ b/app/index.html
@@ -10,14 +10,14 @@
     <meta http-equiv="cache-control" content="no-cache">
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="expires" content="0">
-    <meta name="msapplication-TileImage" content="/img/windows-tile.png"/>
+    <meta name="msapplication-TileImage" content="/img/icon-512.png"/>
     <meta name="msapplication-TileColor" content="#ffffff"/>
     <meta name="theme-color" content="#83C22A">
-    <link rel="fluid-icon" href="/img/fluidicon.png" title="Wallblog"/>
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/wallblog-icon-114.png"/>
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/wallblog-icon-144.png"/>
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/wallblog-icon-114.png"/>
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/wallblog-icon-144.png"/>
+    <link rel="fluid-icon" href="/img/icon-512.png" title="Wallblog"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/icon-114.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/144.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/icon-114.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/icon-144.png"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <link href="/css/main.css" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
