--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#83C22A">
     <link rel="fluid-icon" href="/img/icon-512.png" title="Wallblog"/>
     <link rel="apple-touch-icon" sizes="57x57" href="/img/icon-114.png"/>
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/144.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/icon-144.png"/>
     <link rel="apple-touch-icon" sizes="114x114" href="/img/icon-114.png"/>
     <link rel="apple-touch-icon" sizes="144x144" href="/img/icon-144.png"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
